working index.js, data fetching properly from DB

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "root",
+    "username": "postgres",
     "password": "admin",
     "database": "vehicle_rental_db",
     "host": "127.0.0.1",
