--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "vehicle-rental-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "models/index.js",
+  "main": "index.js",
+  "start": "node models/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
