--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "vehicle-rental-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vercel dev",
-    "start": "node api/index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
