--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mysql2": "^3.14.5",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "vercel": "^48.1.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.3"
